--- a/package.json
+++ b/package.json
@@ -13,30 +13,39 @@
     "@clerk/nextjs": "^6.18.5",
     "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.6",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@sanity/client": "^7.0.0",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/preview-url-secret": "^2.1.10",
     "@sanity/vision": "^3.87.1",
+    "@types/jszip": "^3.4.1",
     "@types/lodash": "^4.17.13",
+    "canvas": "^3.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.6.0",
+    "fabric": "^5.3.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^11.18.2",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
+    "mongodb": "^6.18.0",
     "next": "^15.3.1",
     "next-sanity": "^9.10.6",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
-     "fabric": "^5.3.0",
-    "formidable": "^3.5.4",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -49,13 +58,15 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.5",
+    "@types/fabric": "^5.3.10",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^4.1.5",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
