--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-is": "^19.1.1",
     "sanity": "^3.87.1",
     "sonner": "^2.0.6",
     "styled-components": "^6.1.17",
