--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "formidable": "^3.5.4",
     "framer-motion": "^11.18.2",
     "install": "^0.13.0",
+    "jsdom": "^26.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.18.0",
