--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/jszip": "^3.4.1",
     "@types/lodash": "^4.17.13",
     "@types/react-color": "^3.0.13",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "canvas": "^3.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
