--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@sanity/client": "^7.0.0",
+    "@sanity/color-input": "^4.0.6",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/preview-url-secret": "^2.1.10",
